# AsmVsZombies

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakePresets_.json  LICENSE  MigrationGuide.md  README.md  code_association.txt  metadata.json
AvZ/src/: avz.cpp  avz.h  avz_auto_thread.cpp  avz_card.cpp  avz_click.cpp  avz_debug.cpp  avz_memory.cpp  avz_pao.cpp  avz_time.cpp  avz_time_operation.cpp  dllmain.cpp  memory.cpp  pvzfunc.h  pvzstruct.h  scripts.h
downloader/downloader/: main.cpp
inc/: avz.h  avz_asm.h  avz_cannon.h  avz_card.h  avz_click.h  avz_cob_manager.h  avz_compatible.h  avz_connector.h  avz_coroutine.h  avz_debug.h  avz_exception.h  avz_execption.h  avz_game_controllor.h  avz_global.h  avz_iterator.h  avz_logger.h  avz_memory.h  avz_painter.h  avz_pvz_struct.h  avz_replay.h  avz_script.h  avz_seh.h  avz_smart.h  avz_state_hook.h  avz_tick.h  avz_tick_runner.h  avz_time_operation.h  avz_time_queue.h  avz_timeline.h  avz_types.h  libavz.h  memory.h  pvzfunc.h  pvzstruct.h
inc/dsl/: main.h  shorthand.h  shorthand_240130.h  shorthand_240205.h  shorthand_240713.h  shorthand_next.h  verifier.h
injector/src/: injector.cpp  process.cpp
release/: version.txt
script/: PECannon10.cpp  PECannon14.cpp  PECannon24.cpp  PECannon4.cpp  PECannon8.cpp  README.md  RECannon14.cpp  RECannon16.cpp  scripts.cpp
script/200316/: PECannon10.cpp  PECannon14.cpp  PECannon24.cpp  PECannon4.cpp  PECannon8.cpp  RECannon14.cpp  RECannon16.cpp
script/200412/: PECannon10.cpp  PECannon14.cpp  (+6 more)
src/: avz.cpp  avz_asm.cpp  avz_auto_thread.cpp  avz_cannon.cpp  avz_card.cpp  avz_click.cpp  avz_cob_manager.cpp  avz_connector.cpp  avz_coroutine.cpp  avz_debug.cpp  avz_game_controllor.cpp  avz_global.cpp  avz_hook.cpp  avz_logger.cpp  avz_memory.cpp  avz_painter.cpp  avz_pao.cpp  avz_replay.cpp  avz_script.cpp  avz_seh.cpp  avz_smart.cpp  avz_state_hook.cpp  avz_tick.cpp  avz_tick_runner.cpp  avz_time.cpp  avz_time_operation.cpp  avz_time_queue.cpp  libavz.cpp  memory.cpp  memory_address.txt  pvzfunc.cpp
tools/: copy.py  memory_address.txt  原版函数 v3.088.xlsx
tools/injector/: CMakeLists.txt
tools/injector/inc/: _process.h
tools/injector/src/: _process.h  injector.cpp  injector.h  main.cpp  process.cpp
tutorial/: 00_catalogue.md  01_start.md  01start.md  02_hello_avz.md  02hello_avz.md  03_coding_style.md  03coding_style.md  04_reload_mode.md  04reload_mode.md  05_card_shovel.md  05card_shovel.md  06_co_await.md  06co_await.md  06wait_until.md  07_connect_time.md  07connect_time.md  08_cob_manager_1.md  08cob_manager_1.md  08time.md  09_time.md  09first_tas_script.md  0catalogue.md  10_first_tas_script.md  10ice_filler.md  11_ice_filler.md  11memory_func.md  12_memory_func.md  12second_tas_script.md  13_second_tas_script.md  13cob_manager_2.md  14_cob_manager_2.md  14third_tas_script.md  15_third_tas_script.md  15cob_manager_3.md  16_cob_manager_3.md  16cob_manager_4.md  17_cob_manager_4.md  17cob_manager_5.md  18_cob_manager_5.md  18connector.md  (+40 more)
(+148 files in other folders)
